--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -41,20 +41,20 @@ jobs:
             ${{ env.IMAGE_TAG_SHA }}
             ${{ env.IMAGE_TAG_LATEST }}
 
-#  Deploy:
-#    needs: Build
-#    name: 'Deploy to Azure Container Apps'
-#    runs-on: ubuntu-24.04
-#
-#    steps:
-#      - name: "Setup: Azure Login"
-#        uses: azure/login@v2
-#        with:
-#          creds: ${{ secrets.AZURE_CREDENTIALS }}
-#
-#      - name: "Deploy: Container App"
-#        uses: azure/container-apps-deploy-action@v2
-#        with:
-#          imageToDeploy: ${{ secrets.AZURE_URL }}/synapse-city:latest
-#          resourceGroup: ${{ secrets.AZURE_RESOURCE_GROUP }}
-#          containerAppName: ${{ secrets.AZURE_CONTAINER_APP_NAME_SYNAPSE_CITY }}
+  Deploy:
+    needs: Build
+    name: 'Deploy to Azure Container Apps'
+    runs-on: ubuntu-24.04
+
+    steps:
+      - name: "Setup: Azure Login"
+        uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: "Deploy: Container App"
+        uses: azure/container-apps-deploy-action@v2
+        with:
+          imageToDeploy: ${{ secrets.AZURE_URL }}/synapse-city:latest
+          resourceGroup: ${{ secrets.AZURE_RESOURCE_GROUP }}
+          containerAppName: ${{ secrets.AZURE_CONTAINER_APP_NAME_SYNAPSE_CITY }}
